# mahnahmahnopoly

./: CMakeLists.txt  dummy_toolchain.cmake
engine/src/kat/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Window.cpp  Window.hpp  common.hpp
game/src/: main.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
